infra/security/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-falco
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 45000   # falco k8s meta collector
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: falco
  policyTypes:
  - Egress

# Allow Kyverno to contact external servers (attesting ghcr images)
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-kyverno
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: admission-controller
      app.kubernetes.io/instance: kyverno
  policyTypes:
  - Egress
